--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <!-- Left section -->
       <div class="leftmain">
         <h1>Be Focus and Productive</h1>
-        <p>Not just and ordinary headphones.It's designed for meditation</p>
+        <p>Not just an ordinary pair of headphones.It's designed for meditation</p>
         <button>learn more</button>
       </div>
       <!-- Right section -->
